src/main/antlr4/.antlr/RusticodeParser.java
// Generated from c:/Users/Evelin Suarez/OneDrive/Desktop/Estudio/repoR/src/main/antlr4/Rusticode.g4 by ANTLR 4.13.1

    import java.util.HashMap;
    import java.util.ArrayList;
    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RusticodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, PRINT=4, START=5, END=6, INT=7, FLOAT=8, STRING=9, 
		PLUS=10, MINUS=11, MULT=12, DIV=13, ASSIGN=14, GT=15, LT=16, GTE=17, LTE=18, 
		EQ=19, NEQ=20, AND=21, OR=22, LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, 
		SEMICOLON=27, NUMBER=28, STRING_LITERAL=29, BOOL_LITERAL=30, ID=31, WS=32, 
		COMMENT=33;
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_varDeclaration = 2, RULE_assignmentStmt = 3, 
		RULE_type = 4, RULE_expression = 5, RULE_logicalExpr = 6, RULE_comparisonExpr = 7, 
		RULE_arithmeticExpr = 8, RULE_term = 9, RULE_factor = 10, RULE_ifStmt = 11, 
		RULE_whileStmt = 12, RULE_printStmt = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sentence", "varDeclaration", "assignmentStmt", "type", "expression", 
			"logicalExpr", "comparisonExpr", "arithmeticExpr", "term", "factor", 
			"ifStmt", "whileStmt", "printStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'while'", "'print'", "'start:'", "'end'", "'int'", 
			"'float'", "'string'", "'+'", "'-'", "'*'", "'/'", "'='", "'>'", "'<'", 
			"'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'('", "')'", "'{'", 
			"'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "WHILE", "PRINT", "START", "END", "INT", "FLOAT", 
			"STRING", "PLUS", "MINUS", "MULT", "DIV", "ASSIGN", "GT", "LT", "GTE", 
			"LTE", "EQ", "NEQ", "AND", "OR", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"SEMICOLON", "NUMBER", "STRING_LITERAL", "BOOL_LITERAL", "ID", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rusticode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private HashMap<String, Object> symbolTable = new HashMap<>();

	public RusticodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ASTNode node;
		public SentenceContext sentence;
		public TerminalNode EOF() { return getToken(RusticodeParser.EOF, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);

		        List<ASTNode> body = new ArrayList<>(); // Lista de instrucciones
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				((ProgramContext)_localctx).sentence = sentence();

				        if (((ProgramContext)_localctx).sentence.node != null) {
				            body.add(((ProgramContext)_localctx).sentence.node);
				        } else {
				            System.err.println("Error: sentence es null");
				        }
				    
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4034921370L) != 0) );

			        ((ProgramContext)_localctx).node =  new Program(body); // Crear el nodo Program

			    
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public ASTNode node;
		public VarDeclarationContext varDeclaration;
		public AssignmentStmtContext assignmentStmt;
		public ExpressionContext expression;
		public IfStmtContext ifStmt;
		public WhileStmtContext whileStmt;
		public PrintStmtContext printStmt;
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(RusticodeParser.SEMICOLON, 0); }
		public AssignmentStmtContext assignmentStmt() {
			return getRuleContext(AssignmentStmtContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				((SentenceContext)_localctx).varDeclaration = varDeclaration();
				setState(39);
				match(SEMICOLON);
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).varDeclaration.node; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				((SentenceContext)_localctx).assignmentStmt = assignmentStmt();
				setState(43);
				match(SEMICOLON);
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).assignmentStmt.node; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				((SentenceContext)_localctx).expression = expression();
				setState(47);
				match(SEMICOLON);
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).expression.node; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				((SentenceContext)_localctx).ifStmt = ifStmt();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).ifStmt.node; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				((SentenceContext)_localctx).whileStmt = whileStmt();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).whileStmt.node; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				((SentenceContext)_localctx).printStmt = printStmt();
				setState(57);
				match(SEMICOLON);
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).printStmt.node; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public ASTNode node;
		public TypeContext type;
		public Token ID;
		public ExpressionContext expr;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(RusticodeParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(RusticodeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((VarDeclarationContext)_localctx).type = type();
			setState(63);
			((VarDeclarationContext)_localctx).ID = match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(64);
				match(ASSIGN);
				setState(65);
				((VarDeclarationContext)_localctx).expr = expression();
				}
			}


			            ((VarDeclarationContext)_localctx).node =  (((VarDeclarationContext)_localctx).expr != null)
			                ? new VariableDeclaration((((VarDeclarationContext)_localctx).type!=null?_input.getText(((VarDeclarationContext)_localctx).type.start,((VarDeclarationContext)_localctx).type.stop):null), (((VarDeclarationContext)_localctx).ID!=null?((VarDeclarationContext)_localctx).ID.getText():null), ((VarDeclarationContext)_localctx).expr.node)
			                : new VariableDeclaration((((VarDeclarationContext)_localctx).type!=null?_input.getText(((VarDeclarationContext)_localctx).type.start,((VarDeclarationContext)_localctx).type.stop):null), (((VarDeclarationContext)_localctx).ID!=null?((VarDeclarationContext)_localctx).ID.getText():null), null);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStmtContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public ExpressionContext expr;
		public TerminalNode ID() { return getToken(RusticodeParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(RusticodeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterAssignmentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitAssignmentStmt(this);
		}
	}

	public final AssignmentStmtContext assignmentStmt() throws RecognitionException {
		AssignmentStmtContext _localctx = new AssignmentStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignmentStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((AssignmentStmtContext)_localctx).ID = match(ID);
			setState(71);
			match(ASSIGN);
			setState(72);
			((AssignmentStmtContext)_localctx).expr = expression();
			 ((AssignmentStmtContext)_localctx).node =  new Assignment((((AssignmentStmtContext)_localctx).ID!=null?((AssignmentStmtContext)_localctx).ID.getText():null), ((AssignmentStmtContext)_localctx).expr.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(RusticodeParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(RusticodeParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(RusticodeParser.STRING, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 896L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public LogicalExprContext logicalExpr;
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((ExpressionContext)_localctx).logicalExpr = logicalExpr();
			 ((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).logicalExpr.node; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalExprContext extends ParserRuleContext {
		public ASTNode node;
		public ComparisonExprContext left;
		public Token op;
		public ComparisonExprContext right;
		public ComparisonExprContext comparisonExpr;
		public List<ComparisonExprContext> comparisonExpr() {
			return getRuleContexts(ComparisonExprContext.class);
		}
		public ComparisonExprContext comparisonExpr(int i) {
			return getRuleContext(ComparisonExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(RusticodeParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(RusticodeParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(RusticodeParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(RusticodeParser.OR, i);
		}
		public LogicalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterLogicalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitLogicalExpr(this);
		}
	}

	public final LogicalExprContext logicalExpr() throws RecognitionException {
		LogicalExprContext _localctx = new LogicalExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logicalExpr);
		int _la;
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((LogicalExprContext)_localctx).left = comparisonExpr();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND || _la==OR) {
					{
					{
					setState(81);
					((LogicalExprContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
						((LogicalExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(82);
					((LogicalExprContext)_localctx).right = comparisonExpr();
					 ((LogicalExprContext)_localctx).node =  new LogicalExpression((((LogicalExprContext)_localctx).op!=null?((LogicalExprContext)_localctx).op.getText():null), ((LogicalExprContext)_localctx).left.node, ((LogicalExprContext)_localctx).right.node); 
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				((LogicalExprContext)_localctx).comparisonExpr = comparisonExpr();
				 ((LogicalExprContext)_localctx).node =  ((LogicalExprContext)_localctx).comparisonExpr.node; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonExprContext extends ParserRuleContext {
		public ASTNode node;
		public ArithmeticExprContext left;
		public Token op;
		public ArithmeticExprContext right;
		public ArithmeticExprContext arithmeticExpr;
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public List<TerminalNode> GT() { return getTokens(RusticodeParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(RusticodeParser.GT, i);
		}
		public List<TerminalNode> LT() { return getTokens(RusticodeParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(RusticodeParser.LT, i);
		}
		public List<TerminalNode> GTE() { return getTokens(RusticodeParser.GTE); }
		public TerminalNode GTE(int i) {
			return getToken(RusticodeParser.GTE, i);
		}
		public List<TerminalNode> LTE() { return getTokens(RusticodeParser.LTE); }
		public TerminalNode LTE(int i) {
			return getToken(RusticodeParser.LTE, i);
		}
		public List<TerminalNode> EQ() { return getTokens(RusticodeParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(RusticodeParser.EQ, i);
		}
		public List<TerminalNode> NEQ() { return getTokens(RusticodeParser.NEQ); }
		public TerminalNode NEQ(int i) {
			return getToken(RusticodeParser.NEQ, i);
		}
		public ComparisonExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterComparisonExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitComparisonExpr(this);
		}
	}

	public final ComparisonExprContext comparisonExpr() throws RecognitionException {
		ComparisonExprContext _localctx = new ComparisonExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comparisonExpr);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				((ComparisonExprContext)_localctx).left = arithmeticExpr();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2064384L) != 0)) {
					{
					{
					setState(96);
					((ComparisonExprContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2064384L) != 0)) ) {
						((ComparisonExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(97);
					((ComparisonExprContext)_localctx).right = arithmeticExpr();
					 ((ComparisonExprContext)_localctx).node =  new ComparativeExpression((((ComparisonExprContext)_localctx).op!=null?((ComparisonExprContext)_localctx).op.getText():null), ((ComparisonExprContext)_localctx).left.node, ((ComparisonExprContext)_localctx).right.node); 
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				((ComparisonExprContext)_localctx).arithmeticExpr = arithmeticExpr();
				 ((ComparisonExprContext)_localctx).node =  ((ComparisonExprContext)_localctx).arithmeticExpr.node; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithmeticExprContext extends ParserRuleContext {
		public ASTNode node;
		public TermContext left;
		public Token op;
		public TermContext right;
		public TermContext term;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(RusticodeParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(RusticodeParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(RusticodeParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(RusticodeParser.MINUS, i);
		}
		public ArithmeticExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterArithmeticExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitArithmeticExpr(this);
		}
	}

	public final ArithmeticExprContext arithmeticExpr() throws RecognitionException {
		ArithmeticExprContext _localctx = new ArithmeticExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arithmeticExpr);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((ArithmeticExprContext)_localctx).left = term();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLUS || _la==MINUS) {
					{
					{
					setState(111);
					((ArithmeticExprContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
						((ArithmeticExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(112);
					((ArithmeticExprContext)_localctx).right = term();
					 ((ArithmeticExprContext)_localctx).node =  new ArithmeticExpression((((ArithmeticExprContext)_localctx).op!=null?((ArithmeticExprContext)_localctx).op.getText():null), ((ArithmeticExprContext)_localctx).left.node, ((ArithmeticExprContext)_localctx).right.node); 
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				((ArithmeticExprContext)_localctx).term = term();
				 ((ArithmeticExprContext)_localctx).node =  ((ArithmeticExprContext)_localctx).term.node; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
